Fix header size on small screens

--- a/styles/personalPortfolio.css
+++ b/styles/personalPortfolio.css
@@ -108,6 +108,13 @@ span {
     max-width: 720px;
     margin: auto;
 }
+
+@media screen and (max-width: 500px){
+    h1{
+        font-size: 22px;
+        text-align: center;
+    }    
+}
 @media screen and (min-width: 720px) {
     #grid-container{
         display: grid;
